--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<!-- <li><a href="generic.html">Generic</a></li>
+											<li><a href="elements.html">Elements</a></li> -->
+											<li><a href="https://venmo.com/u/wesli" target="_blank">Donate</a></li>
+											<li><a href="mailto:wesyli@gmail.com">Learn More</a></li>
 										</ul>
 									</div>
 								</li>
@@ -46,10 +46,10 @@
 							machine learning to assist<br />
 							astronauts in space navigation.</p>
 							<ul class="actions special">
-								<li><a href="#one" class="button primary scrolly">Explore</a></li>
+								<li><a href="#two" class="button primary scrolly">Explore</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#two" class="more scrolly">Learn More</a>
 					</section>
 
 				<!-- One -->
@@ -70,11 +70,11 @@
 					</section> -->
 
 				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
+					<section id="two" class="wrapper alt style6">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/cad.JPEG" alt="" /></div><div class="content">
 								<h2>Improved Visibility</h2>
-								<p>360° rotating camera that tilts up and down. The video captured by the camera will then be visible live to the astronaut, helping them observe their surroundings.</p>
+								<p>360° rotating camera that tilts up and down. The video captured by the camera will then be visible live to the astronaut, helping them observe their surroundings. Using computer vision and machine learning, it can also detect possible surroundings.</p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -84,7 +84,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/bicyleist.jpeg" alt="" /></div><div class="content">
 								<h2>Flexibility</h2>
 								<p>While intended for astronauts, the technology can be used by a wide range of consumers. Great examples are bicyclists and mechanics!</p>
 							</div>
@@ -129,7 +129,7 @@
 					</section> -->
 
 				<!-- Team -->	
-				<section id="three" class="wrapper style3 special">
+				<section id="three" class="wrapper style2 special">
 					<div class="inner">
 						<header class="major">
 							<h2>Team</h2>
@@ -137,27 +137,27 @@
 						</header>
 						<ul class="features">
 							<li class="">
-								<div class="image"><img src="images/IMG_5141 2.jpeg" alt="" width="200 px"/>
+								<div class="image"><img src="images/wesleyfbla.JPG" alt="" width="200 px" height="266px"/>
 									<h3>Wesley Li</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<p>I am an AP student from Camas, Washington. I enjoy coding at the cost of my sleep schedule, whether that be robots, websites or apps. </p>
 								</div>
 							</li>
 							<li class="">
-								<div class="image"><img src="images/IMG_5141 2.jpeg" alt="" width="200 px"/>
+								<div class="image"><img src="images/IMG_5141 2.jpeg" alt="" width="200 px" height="266px"/>
 									<h3>Jackson Ding</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<p>Hello my name is Jackson, a grade 11 student from Toronto. I love engineering and I want to retire as a black smith.</p>
 								</div>
 							</li>
 							<li class="">
-								<div class="image"><img src="images/IMG_5141 2.jpeg" alt="" width="200 px"/>
+								<div class="image"><img src="images/suhuang.png" alt="" width="200 px" height="266px"/>
 									<h3>Su Huang</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<p>Hello! My name is Su and I'm an IB1 student from Ottawa, Canada. While I’m interested in both STEM and business, I hope to pursue engineering in the future. A fun fact is that I love playing Game Pigeon!</p>
 								</div>
 							</li>
 							<li class="">
-								<div class="image"><img src="images/IMG_5141 2.jpeg" alt="" width="200 px"/>
+								<div class="image"><img src="images/gracejiang.jpg" alt="" width="200 px" height="266px"/>
 									<h3>Grace Jiang</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<p>Hello! I'm Grace, an IB1 student from Ottawa, Canada. While I am passionate about business, my long term goal is to study health sciences. I’m very interested in volleyball- I currently coach in my free time.</p>
 								</div>
 							</li>
 						</ul>
@@ -168,15 +168,15 @@
 					
 
 				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
+					<section id="cta" class="wrapper style7">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>SpaceBar is still in development</h2>
+								<p>We need all the support we can get. Help us make this dream a reality by finantially supporting us.</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="https://venmo.com/u/wesli" target="_blank" class="button fit primary">Donate</a></li>
+								<li><a href="mailto:wesyli@gmail.com" class="button fit">Learn More</a></li>
 							</ul>
 						</div>
 					</section>
@@ -184,14 +184,13 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
+							<li><a href="mailto:wesyli@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; <a href="http://wesleyli.org">Wesley Li</a></li>
 						</ul>
 					</footer>
 
