last minute touches

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">SpaceBar</a></h1>
+						<h1><a href="index.html"><img src="images/spacebar_logo.png" alt="" height="30px" style="margin-top: 8px;"/></a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -30,7 +30,7 @@
 											<!-- <li><a href="generic.html">Generic</a></li>
 											<li><a href="elements.html">Elements</a></li> -->
 											<li><a href="https://venmo.com/u/wesli" target="_blank">Donate</a></li>
-											<li><a href="mailto:wesyli@gmail.com">Learn More</a></li>
+											<li><a href="mailto:wesyli@gmail.com">Contact Us</a></li>
 										</ul>
 									</div>
 								</li>
@@ -74,7 +74,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/cad.JPEG" alt="" /></div><div class="content">
 								<h2>Improved Visibility</h2>
-								<p>360° rotating camera that tilts up and down. The video captured by the camera will then be visible live to the astronaut, helping them observe their surroundings. Using computer vision and machine learning, it can also detect possible surroundings.</p>
+								<p>360° rotating camera that tilts up and down. The video captured by the camera will then be visible live to the astronaut, helping them observe their surroundings. Using computer vision and machine learning, it can also detect possible hazards.</p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -176,7 +176,7 @@
 							</header>
 							<ul class="actions stacked">
 								<li><a href="https://venmo.com/u/wesli" target="_blank" class="button fit primary">Donate</a></li>
-								<li><a href="mailto:wesyli@gmail.com" class="button fit">Learn More</a></li>
+								<li><a href="mailto:wesyli@gmail.com" class="button fit">Contact Us</a></li>
 							</ul>
 						</div>
 					</section>
